--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="details">
         <div class="col">
-          <img src="images/humidity.png" alt="" />
+          <img src="images/Humidity.png" alt="" />
           <div>
             <p class="humidity">86%</p>
             <p>Humidity</p>
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="col">
-          <img src="images/wind.png" alt="" />
+          <img src="images/Wind.png" alt="" />
           <div>
             <p class="wind-speed">1.8 KM/H</p>
             <p>Wind Speed</p>
